<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".AirportTerminalActivity">

    <TextView
        android:id="@+id/airportNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/airport_name"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="85dp" />

    <Spinner
        android:id="@+id/airportNameSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        tools:text="Aeroport test"/>

    <TextView
        android:id="@+id/airportTerminalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/airport_terminal"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="165dp"
        android:visibility="invisible"/>

    <Spinner
        android:id="@+id/airportTerminalSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/airportValidateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_validate"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="239dp" />
</LinearLayout>